--- a/src/components/ListingItem.css
+++ b/src/components/ListingItem.css
@@ -11,23 +11,23 @@
 }
 .listingItemContainer--Img {
   width: 100%;
-  height: 220px;
+  height: 50%;
+  border-radius: 10px;
 }
 .listingItemContainer--title {
   font-weight: 700;
   font-size: large;
-  position: absolute;
+  position: relative;
   margin-left: 5px;
  
 }
 .listingItemContainer--location {
-  margin-top: 40px;
+  margin-top: -20px;
   font-size: medium;
-  position: absolute;
+  position: relative;
   margin-left: 5px;
 }
 .listingItemContainer__price {
-  margin-top: 70px;
   margin-left: 5px;
   text-align: left;
   color: brown;
@@ -37,6 +37,7 @@
 .listingItemContainer__Odometer{
   text-align: right;
   margin-right: 10px;
+  margin-top: -20px;
   font-size: small;
 }
 .listingItemContainer__Odometer--title{
